@startuml
'https://plantuml.com/class-diagram

Note "TODO: UI classes" as N1

interface ServerApi
class serverListener
class ClientLogic

serverListener ..> ServerApi : implements
ClientLogic ..> ServerApi : uses

interface ServerApi {
    +connect(address : String, port : int, String name) : boolean
    +joinGame(roomNumber : int) : boolean
    +setReady(ready : boolean) : void
    +moveChecker(oldX, oldY, newX, newY) : boolean
    +getNumber() : Integer
    +getBoard() : Array<Array<Integer>>
    +forfeit() : void
}

@enduml